--- a/front-end/src/containers/Submit/Submit.module.css
+++ b/front-end/src/containers/Submit/Submit.module.css
@@ -3,20 +3,20 @@
     font-size: 2.5rem;
 }
 
-.DateHeader {
+.PromptHeader {
     text-align: center;
-
+    font-size: 1.4rem;
 }
 
 .Main {
     display: flex;
     justify-content: center;
-    margin-top: 3vh;
+    margin-top: 5vh;
 }
 
 .TimeFrameCreatorBox {
     width: 90%;
-    max-width: 300px;
+    max-width: calc(200px + 10vw);
     /* margin: auto; */
 }
 
@@ -37,12 +37,21 @@
     margin: auto;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     .Main {
         flex-direction: column;
         align-items: center;
     }
     .TimeFramesBox {
         padding: 0;
+    }
+    .EventHeader {
+        font-size: 1.6rem;
+    }
+    
+    .PromptHeader {
+        text-align: center;
+        font-size: 1.1rem;
+    
     }
 }
